Admin panel and authentication logic

--- a/flaskr/main/templates/main/info.html
+++ b/flaskr/main/templates/main/info.html
@@ -1,7 +1,9 @@
-{% extends "main/navbar.html" %} 
+{% extends "main/base.html" %} 
         
 {% block title %} Info {% endblock %} 
 
 {% block content %} 
+<div class="container mt-4">
     <h1>Info</h1>
+</div>
 {% endblock %} 
