--- a/flaskr/main/templates/main/home.html
+++ b/flaskr/main/templates/main/home.html
@@ -1,7 +1,6 @@
-{% extends "main/navbar.html" %} 
+{% extends "main/base.html" %} 
  
 {% block title %} Home {% endblock %} 
-{% block css %}{{ url_for('static', filename='css/main/home.css') }}{% endblock %}
 
 {% block content %} 
     <!-- Contenido principal -->
@@ -10,36 +9,43 @@
     </div>
     <div class="fade-gradient"></div>
 
-
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>desde</h1>
-    <h1>fdf</h1>
-    <h1>sad</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>ddsf</h1>
-    <h1>dfg</h1>
-    <h1>dfg</h1>
-    <h1>sfdgh</h1>
-    <h1>dfgh</h1>
-    <h1>dfgh</h1>
-    <h1>dfgh</h1>
-    <h1>dfgh</h1>
-    <h1>dfgh</h1>
+    <div class="container mt-4">
+        <div class="d-flex justify-content-center text-center mt-5">
+            <div class="bg-secondary-subtle rounded border border-secondary p-4">
+                <h1 class="text-primary">50 años de tradicion</h1>
+                <h1 class="text-info">Mas de 20 colegios invitados</h1>
+                <h1 class="text-warning">Faltan {{ days_remaining }} dias!</h1>
+            </div>
+        </div>  
+        <div class="d-flex justify-content-center text-center mt-5">
+            <div class="card mr-4" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='img/futbol_portada.jpg') }}" class="card-img-top" alt="futbol">
+                <div class="card-body">
+                <h5 class="card-title">Futbol</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card mr-4" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='img/basket_portada.jpg') }}" class="card-img-top" alt="basket">
+                <div class="card-body">
+                <h5 class="card-title">Basket</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="{{ url_for('static', filename='img/voley_portada.jpg') }}" class="card-img-top" alt="voley">
+                <div class="card-body">
+                <h5 class="card-title">Voley</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    
 {% endblock %} 
 
 {% block script %}
@@ -48,21 +54,75 @@
         var scrollDistance = $(window).scrollTop();
 
         // Altura de transición de tema (20vh desde abajo)
-        var fadeStart = $(window).height() - 100;
+        var fadeStart = $(window).height() - 200;
 
         if (scrollDistance >= fadeStart) {
             // Cambiar a tema oscuro
             $('nav').removeClass('navbar-light bg-light').addClass('navbar-dark bg-dark');
-            $('body').addClass('dark-bg');
             $('.fade-gradient').css('opacity', '0');
         } else {
             // Cambiar a tema claro
             $('nav').removeClass('navbar-dark bg-dark').addClass('navbar-light bg-light');
-            $('body').removeClass('dark-bg');
             $('.fade-gradient').css('opacity', '1');
         }
     });
 </script>
 {% endblock %}
 
-Ahora como contenido quiero agregar una imagen que ocupe todo el ancho de la pantalla, que centrado horizontalmente haya un titulo que diga copa renault. Que antes de que se termine haya un gradiente de desvanecimineto y que al pasar por esa altura el tema de la pagina cambie a oscuro (navbar y fondo). Desde ahi mas tarde implementare el resto de la pagina
+{% block css %}
+<style>
+
+
+    /* Estilo para el fondo de la sección con imagen */
+.full-width-bg {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-image: url("{{ url_for('static', filename='img/basket_wallpaper.jpg') }}"); /* Ruta de tu imagen */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+    opacity: 0.7; /* Opacidad del fondo */
+}
+
+/* Estilo para el gradiente de desvanecimiento */
+.fade-gradient {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20vh; /* Altura del gradiente de desvanecimiento */
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%);
+    pointer-events: none; /* Para que no bloquee los elementos detrás */
+    z-index: 1; /* Asegura que esté sobre el fondo */
+}
+
+/* Estilo oscuro para el navbar */
+.navbar-dark {
+    background-color: #212529b4 !important;
+    transition: background-color 0.5s ease-out; /* Transición suave */
+}
+
+.navbar-light {
+    background-color: #f8f9fab4 !important;
+    transition: background-color 0.5s ease-out; /* Transición suave */
+}
+
+/* Estilo oscuro para el contenido */
+.dark-bg {
+    background-color: #111; /* Color de fondo oscuro */
+    transition: background-color 0.5s ease-out; /* Transición suave */
+}
+
+/* Estilo para reducir el tamaño del logo */
+.navbar-brand img {
+    max-height: 40px; /* Tamaño máximo del logo */
+}
+
+</style>
+{% endblock %}
