Formulario de inscripcion

--- a/flaskr/main/templates/main/base.html
+++ b/flaskr/main/templates/main/base.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Paris Nicolas">
     <!-- styles -->
      <!-- link rel="stylesheet" href="{% block css_url %}{% endblock %}" -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">  
     {% block css %}{% endblock %}
 </head>
-<body class="dark-bg">
+<body class="dark-bg" style="background-color: #111;">
     <header class="header">
         <!-- Navbar -->
         {% include "main/navigation.html" %}
