--- a/flaskr/main/templates/main/home.html
+++ b/flaskr/main/templates/main/home.html
@@ -10,6 +10,7 @@
     <div class="fade-gradient"></div>
 
     <div class="container mt-4">
+        <!-- Estadisticas -->
         <div class="d-flex justify-content-center text-center mt-5">
             <div class="bg-secondary-subtle rounded border border-secondary p-4">
                 <h1 class="text-primary">50 años de tradicion</h1>
@@ -17,31 +18,75 @@
                 <h1 class="text-warning">Faltan {{ days_remaining }} dias!</h1>
             </div>
         </div>  
+
+        <!-- Deportes -->
         <div class="d-flex justify-content-center text-center mt-5">
-            <div class="card mr-4" style="width: 18rem;">
+            <div class="card mr-5" style="width: 18rem;">
                 <img src="{{ url_for('static', filename='img/futbol_portada.jpg') }}" class="card-img-top" alt="futbol">
                 <div class="card-body">
                 <h5 class="card-title">Futbol</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
-            <div class="card mr-4" style="width: 18rem;">
+            <div class="card mr-5" style="width: 18rem;">
                 <img src="{{ url_for('static', filename='img/basket_portada.jpg') }}" class="card-img-top" alt="basket">
                 <div class="card-body">
                 <h5 class="card-title">Basket</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="{{ url_for('static', filename='img/voley_portada.jpg') }}" class="card-img-top" alt="voley">
+                <img src="{{ url_for('static', filename='img/voley_portada.jpg') }}" class="card-img-top" height="190"  alt="voley">
                 <div class="card-body">
                 <h5 class="card-title">Voley</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
+        </div>
+
+        <!-- Sponsors -->
+        <h1 class="mt-5 text-center text-success">Sponsors</h1>
+        <div class="d-flex flex-column mt-5">
+            {% for sponsor in sponsors %}
+            {% if loop.index is even %}
+            <div class="d-flex justify-content-end">
+                <a href="{{ sponsor['website_link'] }}" class="card card-link mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">{{ sponsor['title'] }}</h5>
+                          <p class="card-text">{{ sponsor['description'] }}</p>
+                          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <img src="{{ sponsor['image_link'] }}" class="img-fluid rounded-start" alt="...">
+                      </div>
+                    </div>
+                </a>
+            </div>
+            {% else %}
+            <div class="d-flex">
+                <a href="{{ sponsor['website_link'] }}" class="card card-link mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="{{ sponsor['image_link'] }}" class="img-fluid rounded-start" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">{{ sponsor['title'] }}</h5>
+                          <p class="card-text">{{ sponsor['description'] }}</p>
+                          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                    </div>
+                </a>
+            </div>
+            {% endif %}
+            {% endfor %}
         </div>
         
     </div>
@@ -71,7 +116,14 @@
 
 {% block css %}
 <style>
-
+.card-link {
+    text-decoration: none;
+    color: inherit;
+}
+.card-link:hover {
+    text-decoration: none;
+    color: inherit;
+}
 
     /* Estilo para el fondo de la sección con imagen */
 .full-width-bg {
@@ -116,7 +168,7 @@
 /* Estilo oscuro para el contenido */
 .dark-bg {
     background-color: #111; /* Color de fondo oscuro */
-    transition: background-color 0.5s ease-out; /* Transición suave */
+    /* transition: background-color 0.5s ease-out;  Transición suave */
 }
 
 /* Estilo para reducir el tamaño del logo */
