--- a/flaskr/main/templates/main/inscribirse.html
+++ b/flaskr/main/templates/main/inscribirse.html
@@ -3,5 +3,85 @@
 {% block title %} Inscribirse {% endblock %} 
 
 {% block content %} 
-    <h1>Inscribirse</h1>
+<br>
+<br>
+<div class="container mt-5">
+    <div class="container mt-5 p-3 bg-info rounded">
+        <h1 class="text-warning text-center mb-5">Inscribe un equipo</h1>
+        <form>
+            <div class="mb-3 row">
+                <div class="col-6 form-group">
+                    <label for="colegio">Colegio <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" id="colegio" required>
+                </div>
+                <div class="col-6">
+                    <label>Deporte <span class="text-danger">*</span></label>
+                    <div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="deporte" id="basket" value="basket" required>
+                            <label class="form-check-label" for="basket">Basket</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="deporte" id="voley" value="voley" required>
+                            <label class="form-check-label" for="voley">Voley</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="deporte" id="futbol" value="futbol" required>
+                            <label class="form-check-label" for="futbol">Futbol</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <h3 class="mb-3">Encargado <span class="text-danger">*</span></h3>
+            <div class="row mb-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre del encargado" required>
+                </div>
+                <div class="col">
+                  <input type="tel" class="form-control" placeholder="Telefono" aria-label="Telefono del encargado" required>
+                </div>
+            </div>
+            <hr>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombre del equipo (opcional):</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <table class="table table-striped table-dark table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Telefono</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">DNI</th>
+                        <th scope="col">Celiaco/vegano</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for i in range(1,11)%}
+                    <tr>
+                        <td width="20" scope="row">{{ i }}</td>
+                        <td contenteditable="true"></td>
+                        <td contenteditable="true"></td>
+                        <td contenteditable="true"></td>
+                        <td contenteditable="true"></td>
+                        <td width="220">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Celiaco</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Vegano</label>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+    </div>
+</div>
 {% endblock %} 
