Detalles para un proximamente

--- a/flaskr/main/templates/main/base.html
+++ b/flaskr/main/templates/main/base.html
@@ -21,10 +21,12 @@
         {% block content %}{% endblock %}
     </header>
 
+
     <!-- Bootstrap JS y jQuery (al final del body para mejorar carga) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- GSAP para animaciones -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
