--- a/flaskr/main/templates/main/info.html
+++ b/flaskr/main/templates/main/info.html
@@ -5,5 +5,59 @@
 {% block content %} 
 <div class="container mt-4">
     <h1>Info</h1>
+    <h1 class="text-center">&#128039; Mucho texto blalbalbalblab &#128039;</h1>
+    <br>
+    <div class="container d-flex">
+    <pre class="text-warning mr-5">
+        ____,'`-, 
+        _,--'   ,/::.; 
+     ,-'       ,/::,' `---.___        ___,_ 
+     |       ,:';:/        ;'"`;"`--./ ,-^.;--. 
+     |:     ,:';,'         '         `.   ;`   `-. 
+      \:.,:::/;/ -:.                   `  | `     `-. 
+       \:::,'//__.;  ,;  ,  ,  :.`-.   :. |  ;       :. 
+        \,',';/O)^. :'  ;  :   '__` `  :::`.       .:' ) 
+        |,'  |\__,: ;      ;  '/O)`.   :::`;       ' ,' 
+             |`--''            \__,' , ::::(       ,' 
+             `    ,            `--' ,: :::,'\   ,-' 
+              | ,;         ,    ,::'  ,:::   |,' 
+              |,:        .(          ,:::|   ` 
+              ::'_   _   ::         ,::/:| 
+             ,',' `-' \   `.      ,:::/,:| 
+            | : _  _   |   '     ,::,' ::: 
+            | \ O`'O  ,',   ,    :,'   ;:: 
+             \ `-'`--',:' ,' , ,,'      :: 
+              ``:.:.__   ',-','        ::' 
+      -hrr-      `--.__, ,::.         ::' 
+                     |:  ::::.       ::' 
+                     |:  ::::::    ,::' 
+    </pre>
+    <pre class="text-warning">
+                                         _.-.._         _._
+                             _,/^^,y./  ^^^^"""^^\= \
+                             \y###XX;/  /     \    ^\^\
+                               `\Y^   /   .-==||==-.)^^
+           ,.-=""""=-.__       /^ (  (   -/<0>++<0>(
+         .^      .: . . :^===(^ \ (  (  /```^^^^^^^)
+        /      .: .,GGGGp,_ .(   \   /    /-(o'~'o))
+      .^      : . gGG"""YGG}. \   )   / /  _/-====-\
+     /       (. .gGP  __ ~~ . .\  \  (    (  _.---._)
+    /        (. (GGb,,)GGp. . . \_-^-.__(_ /______./
+   (          \ . `"!GGP^ . . . . ^=-._--_--^^^^^~)
+   (        /^^^\_. . . . . . . . . . . . . . . . )
+   )       /     /._. . . . . . . . . . . . . ._.=)
+   \      /      |  ^"=.. . . . . . . ._++""\"^    \
+    \    |       |       )^|^^~'---'~^^      \     )
+    )   /        )      /   \                 \    \
+    |`  |        \     /\    \                (    /
+    |   |         (   (  \ . .\               |   (
+    )   |         )   )   ^^^^^^              |   |
+   /. . \         |  '|                       )   (
+   ^^^^^^         )    \                      /. . \
+                  / . . \                     ^^^^^^
+                  ^^^^^^^
+    </pre>
+    </div>
+    
 </div>
 {% endblock %} 
