--- a/flaskr/main/templates/main/home.html
+++ b/flaskr/main/templates/main/home.html
@@ -26,7 +26,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Futbol</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Inscribirse</a>
+                <a href="{{ url_for('main.inscribirse', deporte='futbol')}}" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
             <div class="card mr-5" style="width: 18rem;">
@@ -34,7 +34,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Basket</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Inscribirse</a>
+                <a href="{{ url_for('main.inscribirse', deporte='basket')}}" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -42,7 +42,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Voley</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Inscribirse</a>
+                <a href="{{ url_for('main.inscribirse', deporte='voley')}}" class="btn btn-primary">Inscribirse</a>
                 </div>
             </div>
         </div>
@@ -88,9 +88,13 @@
             {% endif %}
             {% endfor %}
         </div>
-        
+
     </div>
     
+        <hr>
+        <h1 class="text-center">Proximamente...</h1>
+        <p class="text-center">Menu y contacto</p>
+        <br>
 {% endblock %} 
 
 {% block script %}
