--- a/flaskr/main/templates/main/home.html
+++ b/flaskr/main/templates/main/home.html
@@ -7,7 +7,7 @@
     <div class="full-width-bg">
         <h1>Copa Renault</h1>
     </div>
-    <div class="fade-gradient"></div>
+    <!--div class="fade-gradient"></div-->
 
     <div class="container mt-4">
         <!-- Estadisticas -->
@@ -134,7 +134,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url("{{ url_for('static', filename='img/basket_wallpaper.jpg') }}"); /* Ruta de tu imagen */
+    background-image: url("{{ url_for('static', filename='img/basket_wallpaper_gradient.png') }}"); /* Ruta de tu imagen */
     background-size: cover;
     background-position: center;
     display: flex;
