--- a/flaskr/admin/templates/admin/base.html
+++ b/flaskr/admin/templates/admin/base.html
@@ -10,7 +10,7 @@
     <!-- styles -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- link rel="stylesheet" href="{{url_for('static', filename="styles.css")}}" -->
+    <link href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.min.css" rel="stylesheet">
     {% block css %}{% endblock %}
   </head>
   <body>
@@ -48,6 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" type="text/javascript"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/2.0.8/js/dataTables.min.js"></script>
     {% block js %}{% endblock %}
   </body>
 </html>
