--- a/flaskr/admin/templates/admin/navigation.html
+++ b/flaskr/admin/templates/admin/navigation.html
@@ -1,9 +1,14 @@
 <!-- Navigation -->
 <header class="p-3 text-bg-dark">
+  
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="{{ url_for('main.home') }}" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="{{ url_for('admin.home') }}" class="nav-link px-2 text-secondary">Admin</a></li>
+          {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('admin.inscripciones') }}" class="nav-link px-2 text-secondary">Inscripciones</a></li>
+          {% endif %}
         </ul>
   
         <div class="text-end">
