--- a/flaskr/main/templates/main/base.html
+++ b/flaskr/main/templates/main/base.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="Paris Nicolas">
     <!-- styles -->
-     <!-- link rel="stylesheet" href="{% block css_url %}{% endblock %}" -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">  
     {% block css %}{% endblock %}
 </head>
@@ -27,17 +28,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <!-- GSAP para animaciones -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        // use a script tag or an external JS file
-        document.addEventListener("DOMContentLoaded", (event) => {
-            gsap.registerPlugin(ScrollTrigger)
-            // gsap code here!
-        });
+        AOS.init();
     </script>
+
     {% block script %}{% endblock %}
 </body>
 </html>
