--- a/flaskr/main/templates/main/home.html
+++ b/flaskr/main/templates/main/home.html
@@ -5,21 +5,40 @@
 {% block content %} 
     <!-- Contenido principal -->
     <div class="full-width-bg">
-        <h1>Copa Renault</h1>
+        <h1 class="animate__animated animate__rubberBand">Copa Renault</h1>
     </div>
     <!--div class="fade-gradient"></div-->
-
+    
+    
+    <!-- Estadisticas -->
+    <div class="d-flex justify-content-center text-center mt-5">
+        <div class="bg-secondary-subtle rounded border border-secondary p-4">
+            <h1 class="text-primary">50 años de tradicion</h1>
+            <h1 class="text-info">Mas de 20 colegios invitados</h1>
+            <h1 class="text-warning">Faltan {{ days_remaining }} dias!</h1>
+        </div>
+    </div>  
+    
     <div class="container mt-4">
-        <!-- Estadisticas -->
-        <div class="d-flex justify-content-center text-center mt-5">
-            <div class="bg-secondary-subtle rounded border border-secondary p-4">
-                <h1 class="text-primary">50 años de tradicion</h1>
-                <h1 class="text-info">Mas de 20 colegios invitados</h1>
-                <h1 class="text-warning">Faltan {{ days_remaining }} dias!</h1>
-            </div>
-        </div>  
+        <!-- Deportes -->
+        <h1 id="inscripciones-title" class="text-info text-center mt-5">Inscripciones</h1>
+        <div class="row text-center mt-5">
+            <a class="col-md-4 img-link" href="{{ url_for('main.inscribirse', deporte='futbol')}}">
+                <img src="{{ url_for('static', filename='img/soccer-ball-illustration-png.webp') }}" class="img-fluid select-img" alt="futbol">
+                <h2>Futbol</h2>
+            </a>
+            <a class="col-md-4 img-link" href="{{ url_for('main.inscribirse', deporte='basket')}}">
+                <img src="{{ url_for('static', filename='img/sport-ball-basketball-png.png') }}" class="img-fluid select-img" alt="futbol">
+                <h2>Basket</h2>
+            </a>
+            <a class="col-md-4 img-link" href="{{ url_for('main.inscribirse', deporte='voley')}}">
+                <img src="{{ url_for('static', filename='img/sport-ball-volleyball-free-png.png') }}" class="img-fluid select-img" alt="futbol">
+                <h2>Voley</h2>
+            </a>
+        </div>
 
         <!-- Deportes -->
+        {#
         <div class="d-flex justify-content-center text-center mt-5">
             <div class="card mr-5" style="width: 18rem;">
                 <img src="{{ url_for('static', filename='img/futbol_portada.jpg') }}" class="card-img-top" alt="futbol">
@@ -46,13 +65,13 @@
                 </div>
             </div>
         </div>
-
+        #}
         <!-- Sponsors -->
         <h1 class="mt-5 text-center text-success">Sponsors</h1>
         <div class="d-flex flex-column mt-5">
             {% for sponsor in sponsors %}
             {% if loop.index is even %}
-            <div class="d-flex justify-content-end" style="height: 200px;">
+            <div class="d-flex justify-content-end" data-aos="fade-left" style="height: 200px;">
                 <a href="{{ sponsor['website_link'] }}" class="card card-link mb-3" style="max-width: 540px;">
                     <div class="row g-0 align-items-center" style="overflow: hidden;">
                         <div class="col-md-6">
@@ -69,7 +88,7 @@
                 </a>
             </div>
             {% else %}
-            <div class="d-flex" style="height: 200px;">
+            <div class="d-flex" data-aos="fade-right" style="height: 200px;">
                 <a href="{{ sponsor['website_link'] }}" class="card card-link mb-3" style="max-width: 540px;">
                     <div class="row g-0 align-items-center " style="overflow: hidden;">
                         <div class="col-md-6 position-relative"> 
@@ -87,6 +106,28 @@
             </div>
             {% endif %}
             {% endfor %}
+        </div>
+
+        
+
+        <div>
+            <div class="d-flex justify-content-center text-center">
+                <div class="m-2 p-4 border">
+                    <h2 class="text-success">Comida</h2>
+                    <div>
+                        <img src="" alt="">
+                        <ul>
+                            <li>Choripan</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="m-2 p-4 border">
+                    <h2 class="text-success">Bebidas</h2>
+                </div>
+                <div class="m-2 p-4 border">
+                    <h2 class="text-success">Postre</h2>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -114,6 +155,17 @@
             $('nav').removeClass('navbar-dark bg-dark').addClass('navbar-light bg-light');
             $('.fade-gradient').css('opacity', '1');
         }
+
+
+        const textElement = document.getElementById('inscripciones-title');
+        const rect = textElement.getBoundingClientRect();
+        const isVisible = rect.top < window.innerHeight && rect.bottom >= 0;
+
+        if (isVisible) {
+            textElement.classList.add('enlarged');
+        } else {
+            textElement.classList.remove('enlarged');
+        }
     });
 </script>
 {% endblock %}
@@ -127,6 +179,31 @@
 .card-link:hover {
     text-decoration: none;
     color: inherit;
+}
+
+.img-link {
+    text-decoration: none;
+    color: rgb(207, 194, 7);
+}
+
+.img-link:hover {
+    border-radius: 10px;
+    background-color: rgb(37, 36, 36);
+    scale: 1.1;
+    transition-duration: 50ms;
+    cursor: pointer;
+}
+
+#inscripciones-title {
+    font-size: 40px;
+    transition: font-size 0.5s ease;
+}
+#inscripciones-title.enlarged {
+    font-size: 60px;
+}
+
+.select-img{
+    height: 20vh;
 }
 
     /* Estilo para el fondo de la sección con imagen */
